finished all the translation for the snap

--- a/development/pages/index.html
+++ b/development/pages/index.html
@@ -9,7 +9,7 @@
   <meta name="keywords"            content="" />
   <!-- Twitter Meta data -->
   <meta name="twitter:account_id"  content="17965843" />
-  <meta name="twitter:card"        content="summary">
+  <meta name="twitter:card"        content="summary_image_large">
   <meta name="twitter:site"        content="@povdocs">
   <meta name="twitter:site:id"     content="17965843">
   <meta name="twitter:title"       content="">
@@ -29,12 +29,10 @@
 <body>
 <main>
   <section id="launcher" class="launcher">
-    <div id="loading" class="progress"><div class="progress-bar"></div></div>
+    <div id="loading" class="progress"><div id="progress-bar" class="progress-bar"></div></div>
     <button id="startStory" type="button">Play</button>
   </section>
 </main>
-<!-- <video loop><source src="assets/top-snap-1.mp4" type="video/mp4"></video> -->
-<!-- <audio loop></audio> -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script type="text/javascript" src="assets/main.min.js"></script>
 </body>
