--- a/development/pages/video.html
+++ b/development/pages/video.html
@@ -27,20 +27,6 @@
   <link rel="stylesheet" type="text/css" href="assets/main.min.css"></link>
 </head>
 <body>
-<main>
- <!--  <section id="launcher" class="snap">
-    <div class="snap-cover">
-    <iframe src="assets/media/top-snap-1-1.mp4" width="100%" height="100%"></iframe>
-    </div>
-  </section> -->
-  <section id="launcher" class="launcher">
-    <div id="loading" class="progress"><div id="progress-bar" class="progress-bar"></div></div>
-    <button id="startStory" type="button">Play</button>
-  </section>
-</main>
-<!-- <video loop><source src="assets/top-snap-1.mp4" type="video/mp4"></video> -->
-<!-- <audio loop></audio> -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-<script type="text/javascript" src="assets/main.min.js"></script>
+<section>Hello</section>
 </body>
 </html>
