updated title in index file

--- a/development/pages/index.html
+++ b/development/pages/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Snapchat tool | POV | PBS</title>
+  <title>POV Stories | POV | PBS</title>
   <meta name="viewport"            content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=no">
   <meta name="description"         content="">
   <meta name="author"              content="POV | American Documentary Inc.">
