moving code form jQuery to JS

--- a/development/pages/index.html
+++ b/development/pages/index.html
@@ -27,7 +27,7 @@
   <link rel="stylesheet" type="text/css" href="assets/main.min.css"></link>
 </head>
 <body>
-<main>
+<main id="main">
   <section id="launcher" class="launcher">
     <div id="loading" class="progress"><div id="progress-bar" class="progress-bar"></div></div>
   </section>
