--- a/development/pages/index.html
+++ b/development/pages/index.html
@@ -32,7 +32,7 @@
     <div id="loading" class="progress"><div id="progress-bar" class="progress-bar"></div></div>
   </section>
 </main>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<script src="assets/plugins/jquery.min.js"></script>
 <script type="text/javascript" src="assets/main.min.js"></script>
 
 <script type="text/javascript">
