rename the detect.js file and added apple native app support

--- a/development/pages/index.html
+++ b/development/pages/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>POV Stories | POV | PBS</title>
-  <meta name="viewport"            content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=no">
+  <meta name="viewport"            content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
   <meta name="description"         content="">
   <meta name="author"              content="POV | American Documentary Inc.">
   <meta name="keywords"            content="" />
@@ -24,6 +24,10 @@
   <meta property="og:og:locale"    content="en_US" />
   <meta property="og:image"        content="" />
 
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="POV Stories">
+
   <link rel="stylesheet" type="text/css" href="assets/main.min.css"></link>
 </head>
 <body>
@@ -33,6 +37,7 @@
   </section>
 </main>
 <script src="assets/plugins/jquery.min.js"></script>
+<script type="text/javascript" src="assets/plugins/detect.js"></script>
 <script type="text/javascript" src="assets/main.min.js"></script>
 
 <script type="text/javascript">
