--- a/development/pages/index.html
+++ b/development/pages/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>POV Stories | POV | PBS</title>
+  <title>POV Mobile Stories | POV | PBS</title>
   <meta name="viewport"            content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
   <meta name="description"         content="">
   <meta name="author"              content="POV | American Documentary Inc.">
@@ -39,21 +39,8 @@
 <script src="assets/plugins/jquery.min.js"></script>
 <script type="text/javascript" src="assets/main.min.js"></script>
 
-<!-- Google Analytics Code -->
-<script type="text/javascript">
-var GA_env    = {ua_list: "UA-1996666-1,UA-3966083-1,UA-3987377-1,ET-3987377-2"};
-GA_env.vars   = {};
-var GA_jshost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + GA_jshost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script src="http://www.pbs.org/js/ga-current.js" type="text/javascript"></script>
-
-<!-- Google Tag Manager -->
-<script type="text/javascript">
-  GTMDataLayer = [];
-</script>
-<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-TWTDGH" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','GTMDataLayer','GTM-TWTDGH');</script>
-<!-- End Google Tag Manager -->
+<!-- Start Your Analytics Code -->
+<!--#include virtual="/pov/global-includes/pbs-script.html"-->
+<!-- End Your Analytics Code -->
 </body>
 </html>
