--- a/development/pages/index.html
+++ b/development/pages/index.html
@@ -7,22 +7,18 @@
   <meta name="description"         content="">
   <meta name="author"              content="POV | American Documentary Inc.">
   <meta name="keywords"            content="" />
-  <!-- Twitter Meta data -->
-  <meta name="twitter:account_id"  content="17965843" />
-  <meta name="twitter:card"        content="summary_image_large">
+  <!-- Social Media Meta data -->
+  <meta name="twitter:card"        content="summary_large_image">
   <meta name="twitter:site"        content="@povdocs">
-  <meta name="twitter:site:id"     content="17965843">
-  <meta name="twitter:title"       content="">
-  <meta name="twitter:url"         content="">
-  <meta name="twitter:image"       content="">
-  <meta name="twitter:description" content="">
-  <!-- Facebook Meta Data -->
-  <meta property="og:url"          content="" />
-  <meta property="og:type"         content="website" />
-  <meta property="og:title"        content="" />
-  <meta property="og:description"  content="" />
-  <meta property="og:og:locale"    content="en_US" />
-  <meta property="og:image"        content="" />
+  <meta name="twitter:creator"     content="@povdocs">
+  <meta property="fb:pages"        content="5902578166">
+  <meta property="og:site_name"    content="POV | American Documentary Inc.">
+  <meta property="og:locale"       content="en_US">
+  <meta property="og:type"         content="website">
+  <meta property="og:title"        content="POV Mobile Stories | POV | PBS">
+  <meta property="og:url"          content="">
+  <meta property="og:image"        content="">
+  <meta property="og:description"  content="">
 
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -40,7 +36,7 @@
 <script type="text/javascript" src="assets/main.min.js"></script>
 
 <!-- Start Your Analytics Code -->
-<!--#include virtual="/pov/global-includes/pbs-script.html"-->
+<!--#include virtual="/pov/global-includes/pov-analytics.html"-->
 <!-- End Your Analytics Code -->
 </body>
 </html>
